# route-playground

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  REMOTE_SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ControlPanel.tsx  JsonPanel.tsx  MapComponent.tsx  MapMatchingPanel.tsx  RouteList.tsx  SpreadsheetEditor.tsx
frontend/src/components/common/: ExportButton.tsx  TabButton.tsx
frontend/src/components/panels/: AnalysisPanel.tsx  EngineGuide.tsx  InputPanel.tsx  OutputPanel.tsx  ServerPanel.tsx
frontend/src/config/: servers.json
frontend/src/constants/: index.ts
frontend/src/hooks/: useRouteSelection.ts  useRouting.ts  useServers.ts
frontend/src/services/: api.ts
frontend/src/types/: excel.ts  mapbox-polyline.d.ts  ui.ts
frontend/src/utils/: excelExport.ts  formatters.ts  routeHelpers.ts  serverHelpers.ts
src/api/: routes.py
src/engines/: base.py  ortools_client.py  roouty_client.py  vroom_client.py
src/models/: job.py  map_matching.py  request.py  response.py
src/services/: job_manager.py
src/utils/: config.py
